profilelist1exp/unpackaged/objects/Partner_Showcase__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Showcases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Location__c</fullName>
        <label>Image Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipName>FAP_Showcase_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Showcase_Title_URL__c</fullName>
        <label>Showcase Title URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Showcase_Title__c</fullName>
        <label>Showcase Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FAP Showcase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Partner Showcase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAP Showcase</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>